# notebook-next-fastapi

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  package.json  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  auth.py  config.py  supabase.py
apps/api/app/models/: __init__.py  folder.py  note.py  upload.py
apps/api/app/routers/: __init__.py  folders.py  notes.py  upload.py
apps/web/: .env.example  middleware.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/app/auth/login/: page.tsx
apps/web/app/auth/signup/: page.tsx
apps/web/app/folders/[id]/: page.tsx
apps/web/app/notes/[id]/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: AutoSaveIndicator.tsx  Editor.tsx  FolderView.tsx  NoteCard.tsx  NoteEditor.tsx  SettingsForm.tsx  Sidebar.tsx  Toolbar.tsx  WelcomeScreen.tsx
apps/web/components/auth/: LoginForm.tsx  SignupForm.tsx
supabase/: config.toml
supabase/migrations/: 20241210000001_create_tables.sql  20241210000002_create_storage.sql  README.md
